<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fade_red"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/hey_there"
        android:layout_marginHorizontal="25dp"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/color_white_smoke"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvHey"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/color_white_smoke"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/additional"
        android:layout_marginHorizontal="25dp"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/color_white_smoke"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email_placeholder"
        android:textColorHint="@color/color_gray_stroke"
        app:layout_constraintTop_toBottomOf="@+id/tvYou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="45dp"
        android:padding="20dp"
        android:textColor="@color/color_black"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/edit_text_box"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password_placeholder"
        android:textColorHint="@color/color_gray_stroke"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="20dp"
        android:textColor="@color/color_black"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/edit_text_box"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/button_bg"
        android:padding="18dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_marginHorizontal="25dp"
        android:focusable="true"
        android:text="@string/btn_signin"/>

</androidx.constraintlayout.widget.ConstraintLayout>