<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fade_red"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHHey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/hey_there"
        android:layout_marginHorizontal="25dp"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/color_white_smoke"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvHHey"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/color_white_smoke"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvHWelcome"
        app:layout_constraintStart_toStartOf="parent"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/color_white_smoke"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:background="@color/color_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>